############################
testrepository release notes
############################

NEXT (In development)
+++++++++++++++++++++

CHANGES
-------

* ``run`` was outputting bad MIME types - test/plain, not text/plain.
  (Robert Collins)

* When list-tests encounters an error, a much clearer response will
  now be shown. (Robert Collins, #1271133)

0.0.18
++++++

CHANGES
-------

* ``run`` now accepts ``--isolated`` as a parameter, which will cause each
  selected test to be run independently. This can be useful to both workaround
  isolation bugs and detect tests that can not be run independently.
  (Robert Collins)

INTERNALS
---------

* ``capture_ids`` in test_run now returns a list of captures, permitting tests
  that need to test multiple runs to do so. (Robert Collins)

0.0.17
++++++

CHANGES
-------

* Restore the ability to import testrepository.repository.memory on Python 2.6.
  (Robert Collins)

0.0.16
++++++

CHANGES
-------

* A new testr.conf option ``group_regex`` can be used for grouping
  tests so that they get run in the same backend runner. (Matthew Treinish)

* Fix Python 3.* support for entrypoints; the initial code was Python3
  incompatible. (Robert Collins, Clark Boylan, #1187192)

* Switch to using multiprocessing to determine CPU counts.
 (Chris Jones, #1092276)

* The cli UI now has primitive differentiation between multiple stream types.
  This is not yet exposed to the end user, but is sufficient to enable the
  load command to take interactive input without it reading from the raw
  subunit stream on stdin. (Robert Collins)

* The scheduler can now groups tests together permitting co-dependent tests to
  always be scheduled onto the same backend. Note that this does not force
  co-dependent tests to be executed, so partial test runs (e.g. --failing)
  may still fail.  (Matthew Treinish, Robert Collins)

* When test listing fails, testr will now report an error rather than